[package]
name = "indexer"
version = "0.1.0"
authors = ["Yorhel <git@yorhel.nl>"]

[dependencies]
regex = "0.1.77"
log = "0.3.6"
env_logger = "0.3.5"
lazy_static = "0.2.1"
libc = "0.2.17"
libarchive3-sys = "0.1.2"
encoding = { git = "https://github.com/lifthrasiir/rust-encoding", features = ["no-optimized-legacy-encoding"] }
ring = "0.5.3"
postgres = { git = "https://github.com/sfackler/rust-postgres" }
clap = "2.16.3"
hyper = "0.9.11"
url = "1.2.3"
chrono = "0.2.25"
