[package]
name = "indexer"
version = "0.1.0"
authors = ["Yorhel <git@yorhel.nl>"]

[dependencies]
regex = "0.2.10"
log = "0.4.1"
env_logger = "0.5.6"
lazy_static = "1.0.0"
libc = "0.2.39"
libarchive3-sys = "0.1.2"
encoding = { git = "https://github.com/lifthrasiir/rust-encoding", features = ["no-optimized-legacy-encoding"] }
ring = "0.12.1"
postgres = "0.15.2"
clap = "2.31.2"
hyper = { version = "0.10.13", default-features = false } # TODO: Update?
url = "1.7.0"
chrono = "0.4.0"
quick-xml = "0.12.1"
